# thumbnails

./: .gitignore  Cargo.toml  README.md
examples/: batch.rs  read.rs
src/: lib.rs  thumbnail.rs
src/thumbs/: img.rs  mod.rs  pdf.rs  video.rs  zip.rs
