[package]
name = "thumbnails"
version = "0.2.0"
edition = "2021"

license = "AGPL-3.0-or-later"
description = "Thumbnailing library. Converts various file formats into a smaller image."
repository = "https://github.com/carrot-png/thumbnails"
readme = "README.md"
keywords = ["thumbnail", "image", "ffmpeg", "pdfium"]

[dependencies]
anyhow = "1.0.97"
image = "0.25.6"
ndarray = "0.16.1"
pdfium-render = "0.8.29"
tempfile = "3.19.0"
tree_magic_mini = "3.1.6"
video-rs = { version = "0.10.3", features = ["ndarray"] }
zip = "2.2.3"

[features]
default = ["img", "zip", "ffmpeg", "pdfium"] 
img = []
zip = []
ffmpeg = []
pdfium = []
