[package]
name = "thumbnails"
version = "0.2.1"
edition = "2021"

license = "AGPL-3.0-or-later"
description = "Thumbnailing library. Converts various file formats into a smaller image."
repository = "https://github.com/carrot-png/thumbnails"
readme = "README.md"
keywords = ["thumbnail", "image", "ffmpeg", "pdfium"]

[dependencies]
anyhow = "1.0"
image = "0.25"
ndarray = "0.17"
pdfium-render = "0.8"
tempfile = "3.25"
tree_magic_mini = "3.2"
video-rs = { version = "0.10", features = ["ndarray"] }
zip = "6.0"

[features]
default = ["img", "zip", "ffmpeg", "pdfium"] 
img = []
zip = []
ffmpeg = []
pdfium = []
